docs: replace JEI with EMI, Fancy Toasts with Advancement Plaques, deduplicate Wave 0